# rikitake_vychmat

./: .gitignore  2d.plot  3d.plot  BEERWARE-LICENSE  CMakeLists.txt  Dockerfile  LICENSE  README.md  diff.plot  methods.md
data/: ADAMS_BASHFORTH_20_0.001_0.01.csv  ADAMS_BASHFORTH_20_0.01_0.01.csv  ADAMS_BASHFORTH_240_0.01_0.01.csv  ADAMS_BASHFORTH_240_0.01_0.1.csv  ADAMS_BASHFORTH_30_0.01_0.1.csv  ADAMS_MOULTON_20_0.0005_0.01.csv  ADAMS_MOULTON_20_0.001_0.01.csv  ADAMS_MOULTON_20_0.01_0.01.csv  ADAMS_MOULTON_240_0.0005_0.01.csv  ADAMS_MOULTON_240_0.01_0.01.csv  ADAMS_MOULTON_240_0.01_0.1.csv  ADAMS_MOULTON_30_0.01_0.1.csv  DOPRI54_20_a0.001_r1e-11_0.01.csv  DOPRI54_20_a1e-08_r1e-05_0.01.csv  DOPRI54_20_a1e-08_r1e-08_0.01.csv  DOPRI8_20_0.0001_0.01.csv  DOPRI8_20_0.001_0.01.csv  DOPRI8_20_0.01_0.01.csv  DOPRI8_240_0.01_0.01.csv  DOPRI8_30_0.01_0.1.csv  RK4_20_0.0005_0.01.csv  RK4_240_0.0005_0.01.csv  RK4_30_0.0005_0.0005.csv  distance_ADAMS_BASHFORTH_20_0.001_0.01_ADAMS_MOULTON_20_0.001_0.01.csv  distance_ADAMS_BASHFORTH_20_0.01_0.01_ADAMS_MOULTON_20_0.0005_0.01.csv  distance_ADAMS_BASHFORTH_20_0.01_0.01_ADAMS_MOULTON_20_0.01_0.01.csv  distance_DOPRI54_20_a0.001_r1e-11_0.01_ADAMS_BASHFORTH_20_0.001_0.01.csv  distance_DOPRI54_20_a0.001_r1e-11_0.01_ADAMS_BASHFORTH_20_0.01_0.01.csv  distance_DOPRI54_20_a0.001_r1e-11_0.01_ADAMS_MOULTON_20_0.001_0.01.csv  distance_DOPRI54_20_a0.001_r1e-11_0.01_ADAMS_MOULTON_20_0.01_0.01.csv  distance_DOPRI54_20_a1e-08_r1e-05_0.01_ADAMS_BASHFORTH_20_0.01_0.01.csv  distance_DOPRI54_20_a1e-08_r1e-05_0.01_ADAMS_MOULTON_20_0.0005_0.01.csv  distance_DOPRI54_20_a1e-08_r1e-05_0.01_DOPRI8_20_0.01_0.01.csv  distance_DOPRI54_20_a1e-08_r1e-08_0.01_ADAMS_MOULTON_20_0.0005_0.01.csv  distance_DOPRI8_20_0.001_0.01_DOPRI8_20_0.0001_0.01.csv  distance_DOPRI8_20_0.01_0.01_ADAMS_BASHFORTH_20_0.001_0.01.csv  distance_DOPRI8_20_0.01_0.01_ADAMS_BASHFORTH_20_0.01_0.01.csv  distance_DOPRI8_20_0.01_0.01_ADAMS_MOULTON_20_0.0005_0.01.csv  distance_DOPRI8_20_0.01_0.01_ADAMS_MOULTON_20_0.001_0.01.csv  distance_DOPRI8_20_0.01_0.01_ADAMS_MOULTON_20_0.01_0.01.csv  (+8 more)
media/: data_ADAMS_BASHFORTH_240_0.01_0.1.csv.html  data_ADAMS_MOULTON_240_0.01_0.1.csv.html  data_DOPRI8_240_0.01_0.1.csv.html
plots/: ADAMS_BASHFORTH_20_0.001_0.01_ADAMS_MOULTON_20_0.001_0.01.gp  ADAMS_BASHFORTH_20_0.01_0.01_ADAMS_MOULTON_20_0.01_0.01.gp  ADAMS_BASHFORTH_ADAMS_MOULTON.gp  DOPRI54_20_a0.001_r1e-11_0.01_ADAMS_BASHFORTH_20_0.001_0.01.gp  DOPRI54_20_a0.001_r1e-11_0.01_ADAMS_BASHFORTH_20_0.01_0.01.gp  DOPRI54_20_a0.001_r1e-11_0.01_ADAMS_MOULTON_20_0.001_0.01.gp  DOPRI54_20_a0.001_r1e-11_0.01_ADAMS_MOULTON_20_0.01_0.01.gp  DOPRI54_ADAMS_BASHFORTH.gp  DOPRI54_ADAMS_MOULTON.gp  DOPRI54_DOPRI8.gp  DOPRI8_20_0.001_0.01_DOPRI8_20_0.0001_0.01.gp  DOPRI8_20_0.01_0.01_ADAMS_BASHFORTH_20_0.001_0.01.gp  DOPRI8_20_0.01_0.01_ADAMS_BASHFORTH_20_0.01_0.01.gp  DOPRI8_20_0.01_0.01_ADAMS_MOULTON_20_0.001_0.01.gp  DOPRI8_20_0.01_0.01_ADAMS_MOULTON_20_0.01_0.01.gp  DOPRI8_20_0.01_0.01_DOPRI54_20_a0.001_r1e-11_0.01.gp  DOPRI8_20_0.01_0.01_DOPRI8_20_0.001_0.01.gp  DOPRI8_ADAMS_BASHFORTH.gp  DOPRI8_ADAMS_MOULTON.gp  RK4_ADAMS_BASHFORTH.gp  RK4_ADAMS_MOULTON.gp  RK4_DOPRI54.gp  RK4_DOPRI8.gp
scripts/: build.sh  calc_data_and_distance.py  create-data.sh  install-libs.sh  run.sh
src/: IMultistepper.hh  IOneStepper.hh  Parameters.h  State.cpp  State.h  System.hh  UniversalRungeKutta.h  calc_model.cpp  calc_model.h  integrate_methods.h  main.cpp
src/AdamsBashforth/: AdamsBashforth.hh
src/AdamsMoulton/: AdamsMoulton.hh  last_backward_difference.hh
src/ExplicitMethods/: DOPRI8.hh  RK4.cpp  RK4.hh
src/ExplicitMethods/UniversalRungeKuttaStepper/: UniversalRungeKuttaStepper.hh
src/RikitakeModel/: State.cpp  dx_dt.cpp
src/RikitakiModel/: Parameters.hh  State.hh  dx_dt.hh
src/cpp/: IMultistepper.hh  IStepper.hh  SolverType.hh  System.hh  main.cpp  solve_model.cpp  solve_model.hh
src/dopri54/: DOPRI54.h
src/explicit_methods/: DOPRI8.h  ForwardEuler.h  Midpoint.h  RugleKutta4.h
src/python/: main.py
(+13 files in other folders)
